REFS 91328 - Converts components engine Date.today into TimeKeeper.date_of_record.

--- a/components/benefit_sponsors/app/views/benefit_sponsors/profiles/broker_agencies/broker_agency_staff_roles/_form.html.erb
+++ b/components/benefit_sponsors/app/views/benefit_sponsors/profiles/broker_agencies/broker_agency_staff_roles/_form.html.erb
@@ -21,6 +21,7 @@
 
 <script type="text/javascript">
     function showDatepicker(element) {
-      initDatepicker(element.id,new Date('<%= Date.today.beginning_of_month-100.years %>'),new Date('<%= Date.today.beginning_of_month-16.years %>'))
+      // Date.etoday converted to TimeKeeper.date_of_record
+      initDatepicker(element.id,new Date('<%= TimeKeeper.date_of_record.beginning_of_month-100.years %>'),new Date('<%= TimeKeeper.date_of_record.beginning_of_month-16.years %>'))
     }
 </script>
