--- a/components/benefit_sponsors/app/assets/javascripts/benefit_sponsors/application.js.erb
+++ b/components/benefit_sponsors/app/assets/javascripts/benefit_sponsors/application.js.erb
@@ -17,7 +17,8 @@
 // Initalize Datepickers for elements
 $(function() {
   // Pass element ID, minDate, maxDate for datepicker options
-  initDatepicker('inputDOB',new Date('<%= Date.today.beginning_of_month-90.years %>'),new Date('<%= Date.today.end_of_month-18.years %>'));
+  // Date.today converted to TimeKeeper.date_of_record
+  initDatepicker('inputDOB',new Date('<%= TimeKeeper.date_of_record.beginning_of_month-90.years %>'),new Date('<%= TimeKeeper.date_of_record.end_of_month-18.years %>'));
 });
 
 
