REFS 91328 - Changes date.today to TimeKeeper.date_of_record.

--- a/components/financial_assistance/app/views/financial_assistance/applicants/_dependent_form.html.erb
+++ b/components/financial_assistance/app/views/financial_assistance/applicants/_dependent_form.html.erb
@@ -1,3 +1,5 @@
+<!-- Date.today converted to TimeKeeper.date_of_record -->
+
 <li id="<%= employee_dependent_form_id(@applicant) %>" class="dependent_list">
   <div id="add_info_<%= @applicant.id %>" class="<%= pundit_class Family, :updateable?%>">
 
@@ -34,7 +36,7 @@
                 </div>
                 <div class="col-md-2 col-sm-6 no-pd form-group-lg no-pd class-fa-household">
                   <label class="static_label label-floatlabel" for="name">AGE</label>
-                  <span class="field_value floatlabel form-control active-floatlabel" id="name"><%= "#{@applicant.age_on(Date.today)}" %></span>
+                  <span class="field_value floatlabel form-control active-floatlabel" id="name"><%= "#{@applicant.age_on(TimeKeeper.date_of_record)}" %></span>
                 </div>
                 <div class="col-md-3 col-sm-6 no-pd form-group-lg no-pd class-fa-household">
                   <label class="static_label label-floatlabel" for="name">GENDER</label>
