--- a/components/financial_assistance/app/views/financial_assistance/applicants/_applicants.html.erb
+++ b/components/financial_assistance/app/views/financial_assistance/applicants/_applicants.html.erb
@@ -1,3 +1,5 @@
+<!-- Date.today converted to TimeKeeper.date_of_record -->
+
 <% if @change_plan.present? && @sep.blank?%>
     <h3 class="blue-text"><%= params[:change_plan] %>, on: <%= @change_plan_date %></h3>
 <% end %>
@@ -17,7 +19,7 @@
     </div>
     <div class="col-md-2 col-sm-6 no-pd form-group-lg no-pd class-fa-household">
       <label class="static_label label-floatlabel" for="name">AGE</label>
-      <span class="field_value floatlabel form-control active-floatlabel" id="name"><%= "#{@person.age_on(Date.today)}" %></span>
+      <span class="field_value floatlabel form-control active-floatlabel" id="name"><%= "#{@person.age_on(TimeKeeper.date_of_record)}" %></span>
     </div>
     <div class="col-md-3 col-sm-6 no-pd form-group-lg no-pd class-fa-household">
       <label class="static_label label-floatlabel" for="name">GENDER</label>
