--- a/app/views/insured/families/_enrollment.html.erb
+++ b/app/views/insured/families/_enrollment.html.erb
@@ -193,7 +193,7 @@
     <% if !read_only == true %>
       <div class="col-lg-3">
         <div class="row <%if make_changes_button_status %>cna<%end%>">
-         <% if is_family_eligible_to_enroll && !(hbx_enrollment.coverage_terminated? || hbx_enrollment.coverage_canceled?) && hbx_enrollment.is_shop?%>
+         <% if hbx_enrollment.can_make_changes? && !(hbx_enrollment.coverage_terminated? || hbx_enrollment.coverage_canceled?) && hbx_enrollment.is_shop?%>
             <%= pundit_span Family, :updateable? %>
                <!-- Use turbolinks: false, to avoid calling controller action twice-->
               <%= link_to l10n('make_changes'), new_insured_group_selection_path(person_id: @person.id, employee_role_id: @employee_role.try(:id), change_plan: 'change_plan', hbx_enrollment_id: hbx_enrollment.id, coverage_kind: hbx_enrollment.coverage_kind), class: 'btn btn-default btn-block ee-make-changes', disabled: make_changes_button_status,  data: { turbolinks: false } %>
