employer staff form and cukes for personal info section

--- a/app/views/accounts/_available_accounts.html.erb
+++ b/app/views/accounts/_available_accounts.html.erb
@@ -11,4 +11,15 @@
       </div>
     </div>
   </div>
+  <div class="col-12 mt-3 no-pd">
+    <div class="d-flex flex-row bg-white rounded flex-shadow">
+      <div class="col-10 p-3">
+        <h6><b>Employer POC</b></h6>
+        <p class="mt-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et aliqua..</p>
+      </div>
+      <div class="col-2 p-3">
+        <%= link_to "Add Portal", benefit_sponsors.new_staff_member_profiles_employers_employer_staff_roles_path(id: @person.id) , class: "btn btn-outline-primary pull-right mt-3" %>
+      </div>
+    </div>
+  </div>
 </div>
