--- a/app/views/people/_person_information.html.erb
+++ b/app/views/people/_person_information.html.erb
@@ -87,7 +87,7 @@
     <div class="col-md-12 no-pd mt-3">
       <button class="col-md-2 btn btn-outline-primary" onclick="return false;"> Cancel </button>
 
-      <button class="col-md-2 btn btn-primary pull-right"  type="submit"> Save Changes </button>
+        <button id="save-person" class="col-md-2 btn btn-primary pull-right"  type="submit"> Save Changes </button>
     </div>
 
   <% end %>
