--- a/app/views/insured/families/_enrollment.html.erb
+++ b/app/views/insured/families/_enrollment.html.erb
@@ -75,7 +75,7 @@
         <% end %>
         <div class="enrollment-type info vertical-align-top">
           <strong><%= l10n("plan_type") %>:</strong>
-          <%= render_plan_type_details(product) %>
+          <%# = render_plan_type_details(product) %>
         </div>
       </div>
       <% if read_only == true %>
@@ -192,11 +192,11 @@
     </div>
     <% if !read_only == true %>
       <div class="col-lg-3">
-        <div class="row <%if hbx_enrollment.is_shop? && can_make_changes_for_enrollment %>cna<%end%>">
+        <div class="row <%if !can_make_changes_for_enrollment %>cna<%end%>">
          <% if can_make_changes_for_enrollment && !(hbx_enrollment.coverage_terminated? || hbx_enrollment.coverage_canceled?) && hbx_enrollment.is_shop?%>
             <%= pundit_span Family, :updateable? %>
                <!-- Use turbolinks: false, to avoid calling controller action twice-->
-              <%= link_to l10n('make_changes'), new_insured_group_selection_path(person_id: @person.id, employee_role_id: @employee_role.try(:id), change_plan: 'change_plan', hbx_enrollment_id: hbx_enrollment.id, coverage_kind: hbx_enrollment.coverage_kind), class: 'btn btn-default btn-block ee-make-changes', disabled: can_make_changes_for_enrollment,  data: { turbolinks: false } %>
+              <%= link_to l10n('make_changes'), new_insured_group_selection_path(person_id: @person.id, employee_role_id: @employee_role.try(:id), change_plan: 'change_plan', hbx_enrollment_id: hbx_enrollment.id, coverage_kind: hbx_enrollment.coverage_kind), class: 'btn btn-default btn-block ee-make-changes', disabled: !can_make_changes_for_enrollment,  data: { turbolinks: false } %>
             </span>
           <!-- This potentially allows certain shop users to view Make Changes -->
           <% elsif can_make_changes_for_enrollment %>
