--- a/components/benefit_sponsors/app/views/benefit_sponsors/profiles/employers/employer_staff_roles/new_staff_member.html.erb
+++ b/components/benefit_sponsors/app/views/benefit_sponsors/profiles/employers/employer_staff_roles/new_staff_member.html.erb
@@ -1,5 +1,5 @@
 <% content_for :navigation do %>
-  <%= render partial: 'ui-components/v1/navs/manage_account' %>
+  <%= render partial: 'ui-components/v1/navs/manage_account', locals: {person_id: @staff_member.person_id} %>
 <% end %>
 
 <div class="documents-tab" style="padding-top: 0px !important;">
