--- a/app/views/exchanges/employer_applications/_reinstate_benefit_application_modal.html.erb
+++ b/app/views/exchanges/employer_applications/_reinstate_benefit_application_modal.html.erb
@@ -5,11 +5,11 @@
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
       </div>
       <div class="modal-body">
-        <h4>Would you like to reinstate the plan year?</h4>
+        <h4><%= l10n("exchange.employer_applications.confirmation_message")%></h4>
       </div>
       <div class="modal-footer">
-        <%= link_to "Continue", exchanges_employer_application_reinstate_path({employer_application_id: application.id, employer_id: application.benefit_sponsorship.id}), method: :put, remote: true, class: "btn btn-primary mtz  btn-small"%>
-        <span class="btn btn-default btn-small" data-dismiss="modal">Cancel</span>
+        <%= link_to l10n("en.exchange.employer_applications.continue"), exchanges_employer_application_reinstate_path({employer_application_id: application.id, employer_id: application.benefit_sponsorship.id}), method: :put, remote: true, class: "btn btn-primary mtz  btn-small"%>
+        <span class="btn btn-default btn-small" data-dismiss="modal"><%= l10n("en.exchange.employer_applications.cancel")%></span>
       </div>
     </div>
   </div>
