--- a/app/views/ui-components/bs4/v1/navs/_header.slim
+++ b/app/views/ui-components/bs4/v1/navs/_header.slim
@@ -10,7 +10,7 @@ nav class=("navbar navbar-expand-lg navbar-main pt-0 pb-0 #{"pre_prod_nav_color"
       ul.navbar-nav
         li.nav-item.active
           a.nav-link.pt-0.portal
-            = get_header_text(controller_name)
+            = l10n(".call_customer_service")
 
     ul.list-group.list-group-flush
       li.list-group-item.user-actions.pt-0.pb-0 href="tel: #{Settings.contact_center.short_number}"
