ref:91585 WIP fixes oe end date issue

--- a/components/benefit_sponsors/app/views/benefit_sponsors/benefit_applications/benefit_applications/shared/_benefit_application_fields.html.slim
+++ b/components/benefit_sponsors/app/views/benefit_sponsors/benefit_applications/benefit_applications/shared/_benefit_application_fields.html.slim
@@ -162,7 +162,8 @@ javascript:
     var date = JSON.parse('#{@benefit_application_form.start_on_options.to_json.html_safe}');
     var targetDate = document.getElementById("baStartDate").value
     var minDate = document.querySelector("input#benefit_application_open_enrollment_start_on").dataset.dateMin;
-    var maxDate = getFormattedDate(date[targetDate]["open_enrollment_end_on"]);
+    var maxDate = document.querySelector("input#benefit_application_open_enrollment_end_on").dataset.oeEndDate;
+    // var maxDate = getFormattedDate(date[targetDate]["open_enrollment_end_on"]);
 
     if (minDate) {
       initDatepicker(id,new Date(minDate),new Date(maxDate));
