--- a/app/assets/stylesheets/ui-components/mahc-theme.scss
+++ b/app/assets/stylesheets/ui-components/mahc-theme.scss
@@ -432,6 +432,10 @@ thead {
   margin-top: 30px
 }
 
+div.right-view-details {
+  text-align: right;
+}
+
 .rp-plan-info {
   font-size:10px;
   text-transform: uppercase;
