--- a/components/benefit_sponsors/app/views/benefit_sponsors/profiles/employers/employer_profiles/my_account/_benefits.html.erb
+++ b/components/benefit_sponsors/app/views/benefit_sponsors/profiles/employers/employer_profiles/my_account/_benefits.html.erb
@@ -63,6 +63,9 @@
               </span>
               <%= benefit_application.start_on.to_date.year %>
               Plan Year (<%= benefit_application_summarized_state(benefit_application) %>)
+              <% if benefit_application.reinstated_id? %>
+                (<%= l10n("employers.plan_years.reinstated") %>)
+              <% end %>
           </h3>
         </div>
         <div class="row" style="margin-right:1px">
@@ -190,9 +193,6 @@
                 </section>
 
                 <div class="col-xs-2 top-view-details">
-                  <%if package.benefit_application.reinstated_id?%>
-                    <div class="right-view-details text-danger"><b><%= l10n("employers.plan_years.reinstated") %></b></div>
-                  <%end%>
                   <button class="nav-toggle row view" id="showhidebutton" onclick="EmployerProfile.viewDetails($(this))">View Details
                     <i class="fa fa-chevron-down fa-lg"></i>
                   </button>
