--- a/components/benefit_sponsors/app/views/benefit_sponsors/profiles/registrations/new_employer_profile_form.html.erb
+++ b/components/benefit_sponsors/app/views/benefit_sponsors/profiles/registrations/new_employer_profile_form.html.erb
@@ -5,6 +5,7 @@
 <div class="documents-tab" style="padding-top: 0px !important;">
   <div class=" container personal-info-container no-pd">
     <%= form_for @agency, as: :agency, url: {action: "create"},  html: { class: "needs-ajax-validation s508", novalidate:true } do |f| %>
+      <%= hidden_field_tag :manage_portals, true %>
       <%= render partial: 'employer_profile_form', locals: {f: f} %>
     <% end %>
   </div>
