--- a/app/views/people/_available_accounts.html.erb
+++ b/app/views/people/_available_accounts.html.erb
@@ -3,6 +3,17 @@
   <div class="col-12 mt-3 no-pd">
     <div class="d-flex flex-row bg-white rounded flex-shadow">
       <div class="col-10 p-3">
+        <h6><b>Employee</b></h6>
+        <p class="mt-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et aliqua..</p>
+      </div>
+      <div class="col-2 p-3">
+        <%= link_to "Add Portal", main_app.privacy_insured_employee_index_path(person_id: @person.id) , class: "btn btn-outline-primary pull-right mt-3" %>
+      </div>
+    </div>
+  </div>
+  <div class="col-12 mt-3 no-pd">
+    <div class="d-flex flex-row bg-white rounded flex-shadow">
+      <div class="col-10 p-3">
         <h6><b>Employer</b></h6>
         <p class="mt-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et aliqua..</p>
       </div>
