refs #90941 update retroactive_canceled state changes

--- a/app/views/exchanges/employer_applications/index.js.erb
+++ b/app/views/exchanges/employer_applications/index.js.erb
@@ -47,7 +47,7 @@ function populateDropDown(status) {
 
   var cancel_states = ["approved", "pending", "draft", "imported", "enrollment_open", "enrollment_extended", "enrollment_closed", "enrollment_eligible", "binder_paid", "enrollment_ineligible", "active"]
   var term_states = ["active", "suspended", "expired", "termination_pending"]
-  var reinstate_states = ["terminated", "termination_pending", "retroactive_cancel", "canceled"]
+  var reinstate_states = ["terminated", "termination_pending", "retroactive_canceled", "canceled"]
 
   if (cancel_states.indexOf(status) > -1) {
     $('li.cancel-py').removeClass('blocking');
@@ -183,7 +183,7 @@ function validTerminatePy() {
 
 function populateReinstateStartDate(pyStatus, pyStartDate, pyEndDate, applicationId) {
 
-  var canceled_states = ["retroactive_cancel", "canceled"]
+  var canceled_states = ["retroactive_canceled", "canceled"]
   var terminated_states = ["terminated", "termination_pending"]
 
   if (canceled_states.indexOf(pyStatus) > -1) {
