--- a/app/views/people/_available_accounts.html.erb
+++ b/app/views/people/_available_accounts.html.erb
@@ -7,7 +7,9 @@
         <p class="mt-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et aliqua..</p>
       </div>
       <div class="col-2 p-3">
-        <%= link_to "Add Portal", main_app.privacy_insured_employee_index_path(person_id: @person.id) , class: "btn btn-outline-primary pull-right mt-3" %>
+        <button type="button" class="btn btn-outline-primary pull-right mt-3" data-toggle="modal" data-target="#confirm-submit">
+          Add Portal
+        </button>
       </div>
     </div>
   </div>
@@ -30,6 +32,26 @@
       </div>
       <div class="col-2 p-3">
         <%= link_to "Add Portal", benefit_sponsors.new_staff_member_profiles_employers_employer_staff_roles_path(id: @person.id) , class: "btn btn-outline-primary pull-right mt-3" %>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="modal fade" tabindex="-1" role="dialog" id="confirm-submit">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Confirm Creation of New Portal</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <p><strong>New Employee Application</strong></p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+        <%= link_to 'Add Role', main_app.privacy_insured_employee_index_path(person_id: @person.id), class: 'btn btn-primary' %>
       </div>
     </div>
   </div>
