--- a/components/benefit_sponsors/app/views/benefit_sponsors/profiles/registrations/_employer_profile_form.html.slim
+++ b/components/benefit_sponsors/app/views/benefit_sponsors/profiles/registrations/_employer_profile_form.html.slim
@@ -60,9 +60,23 @@ fieldset.mt-2
       h4.mt-1 Please indicate preferred method to receive notices (OPTIONAL)
       = f_profile.select :contact_method, options_for_select(f_profile.object.contact_method_options, selected: f_profile.object.contact_method[1]), {}, class:'form-control'
 
-      = f.submit "Add Portal", class: "btn btn-primary pull-right mt-2", id: 'employer_registration_form'
+      input.btn.btn-primary.pull-right.mt-2#employer_registration_form data-target="#confirm-submit" data-toggle="modal" name="btn" type="button" value="Add Portal"
+      = link_to 'Cancel', main_app.available_accounts_person_path(id: @person_id), class: 'btn btn-outline-primary pull-right mt-2 mr-2'
 
       input type="hidden" name="employer_id" id="employer_id"
+
+.modal#confirm-submit role="dialog" tabindex="-1"
+  .modal-dialog role="document"
+    .modal-content
+      .modal-header
+        h5.modal-title Confirm Creation of New Portal
+        button.close aria-label="Close" data-dismiss="modal" type="button" 
+          span aria-hidden="true"  &times;
+      .modal-body
+        strong New Employer Application
+      .modal-footer
+        button.btn.btn-outline-primary data-dismiss="modal" type="button"  Cancel
+        button.btn.btn-primary.add-role type="button"  Add Role
 
 javascript:
 
@@ -120,6 +134,21 @@ javascript:
       $("#other-reason-textarea").val("");
     }
   });
+
+  $('#employer_registration_form').on('click', function(event) {
+    form = document.getElementsByClassName('needs-ajax-validation')[0]
+    if (form.checkValidity() === false) {
+      form.classList.add('was-validated');
+      event.stopPropagation();
+    }
+  })
+
+  $('.add-role').on('click', function(event) {
+    event.preventDefault()
+    event.stopPropagation()
+    form = document.getElementsByClassName('needs-ajax-validation')[0]
+    form.submit();
+  })
 
 
 
