refs #90941 notify EDI on selection

--- a/app/views/exchanges/employer_applications/_reinstate_benefit_application_modal.html.erb
+++ b/app/views/exchanges/employer_applications/_reinstate_benefit_application_modal.html.erb
@@ -8,9 +8,20 @@
         <h4><%= l10n("exchange.employer_applications.confirmation_message")%></h4>
       </div>
       <div class="modal-footer">
-        <%= link_to l10n("exchange.employer_applications.continue"), exchanges_employer_application_reinstate_path({employer_application_id: application.id, employer_id: application.benefit_sponsorship.id}), method: :put, remote: true, class: "btn btn-primary mtz  btn-small"%>
+        <%= link_to l10n("exchange.employer_applications.continue"), '#', :onclick => "submitReinstateAction('#{application.id}','#{application.benefit_sponsorship.id}')", class: "btn btn-primary mtz  btn-small"%>
         <span class="btn btn-default btn-small" data-dismiss="modal"><%= l10n("exchange.employer_applications.cancel")%></span>
       </div>
     </div>
   </div>
 </div>
+
+<script>
+  function submitReinstateAction(applicationId, sponosorshipId) {
+    transmit_to_carrier =  $('#' + applicationId).find('input[id=transmit_to_carrier]').is(":checked")
+    $.ajax({
+        url: "/exchanges/employer_applications/"+applicationId+"/reinstate",
+        method: 'PUT',
+        data: { employer_application_id: applicationId, employer_id: sponosorshipId, transmit_to_carrier: transmit_to_carrier }
+    });
+  }
+</script>
