--- a/app/views/exchanges/employer_applications/index.js.erb
+++ b/app/views/exchanges/employer_applications/index.js.erb
@@ -147,6 +147,14 @@ function hideEndDateField(startDate, applicationId) {
   },300)
 }
 
+function disableTransmitToCarrier(applicationId) {
+  $('#' + applicationId).find('input[id=transmit_to_carrier]').prop('disabled', true);
+}
+
+function enableTransmitToCarrier(applicationId) {
+  $('#' + applicationId).find('input[id=transmit_to_carrier]').prop('disabled', false);
+}
+
 function showEndDateField() {
   $('input.py-end-date').removeClass('hidden')
   $('#calendar_icon').removeClass('hidden')
@@ -207,6 +215,7 @@ function pyAction(action, id, status, employer_id, end_on, start_on) {
   if (action == "reinstate") {
     populateReinstateStartDate(pyStatus, pyStartDate, pyEndDate, applicationId)
     hideTerminationRadios();
+    enableTransmitToCarrier(applicationId);
     enableSubmitButton()
   }
   
@@ -215,12 +224,14 @@ function pyAction(action, id, status, employer_id, end_on, start_on) {
     clearDatePickerValue();
     disableSubmitButton();
     updateDatePickerBasedOnTermReason('voluntary', id)
+    disableTransmitToCarrier(applicationId);
   }
   
   if (action == 'cancel') {
     hideEndDateField(pyStartDate, applicationId);
     hideTerminationRadios();
     enableSubmitButton();
+    disableTransmitToCarrier();
   }
   // Clears all end dates from previous rows
   var endDates = document.querySelectorAll('.py-end-date');
@@ -313,14 +324,19 @@ function checkTermReason() {
 
 // You can use the actionSelected here
 function submitPlanActions() {
-  termKind = actionSelected == "terminate" ? $('input[name=term_actions]:checked').val() : ""
-  termReason = $('#term_reason_' + applicationId).val()
-  transmit_to_carrier =  $('#' + applicationId).find('input[id=transmit_to_carrier]').is(":checked")
-  $.ajax({
-    url: "/exchanges/employer_applications/"+applicationId+"/"+actionSelected,
-    method: 'PUT',
-    data: { employer_id: employerId, end_on: pyEndDate, term_kind: termKind, term_reason: termReason, transmit_to_carrier: transmit_to_carrier }
-  });
+  if (actionSelected == 'reinstate'){
+    $("#reinstateBenefitApplication_"+ applicationId).modal('show');
+
+  }else{
+    termKind = actionSelected == "terminate" ? $('input[name=term_actions]:checked').val() : ""
+    termReason = $('#term_reason_' + applicationId).val()
+    transmit_to_carrier =  $('#' + applicationId).find('input[id=transmit_to_carrier]').is(":checked")
+    $.ajax({
+        url: "/exchanges/employer_applications/"+applicationId+"/"+actionSelected,
+        method: 'PUT',
+        data: { employer_id: employerId, end_on: pyEndDate, term_kind: termKind, term_reason: termReason, transmit_to_carrier: transmit_to_carrier }
+    });
+  }
 }
 
 $('#attestation_documents_table').mousemove(function() {
