--- a/app/views/people/_available_accounts.html.erb
+++ b/app/views/people/_available_accounts.html.erb
@@ -50,6 +50,28 @@
       </div>
     </div>
   </div>
+  <div class="col-12 mt-3 no-pd">
+    <div class="d-flex flex-row bg-white rounded flex-shadow">
+      <div class="col-10 p-3">
+        <h6><b><%= l10n('broker_poc') %></b></h6>
+        <p class="mt-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et aliqua..</p>
+      </div>
+      <div class="col-2 p-3">
+        <%= link_to "Add Portal", benefit_sponsors.new_staff_member_profiles_broker_agencies_broker_agency_staff_roles_path(id: @person.id) , class: "btn btn-outline-primary pull-right mt-3" %>
+      </div>
+    </div>
+  </div>
+  <div class="col-12 mt-3 no-pd">
+    <div class="d-flex flex-row bg-white rounded flex-shadow">
+      <div class="col-10 p-3">
+        <h6><b><%= l10n('ga_poc') %></b></h6>
+        <p class="mt-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et aliqua..</p>
+      </div>
+      <div class="col-2 p-3">
+        <%= link_to "Add Portal", benefit_sponsors.new_staff_member_profiles_general_agencies_general_agency_staff_roles_path(id: @person.id) , class: "btn btn-outline-primary pull-right mt-3" %>
+      </div>
+    </div>
+  </div>
 </div>
 
 <div class="modal fade" tabindex="-1" role="dialog" id="confirm-submit">
